--- a/www/src/main/webapp/css/common.css
+++ b/www/src/main/webapp/css/common.css
@@ -1,8 +1,117 @@
 
 body {
     margin: 0;
-    font-family: "Arial Unicode MS";
+    font-family: "Arial Unicode MS", sans-serif;
 
     padding: 0;
     background-color: white;
+}
+
+.header {
+    height: 570px;
+    background-color: #ff6000;
+    background: url(../images/header.png) center;
+    background-size: cover;
+    width: auto;
+    display:block;
+    margin: 0;
+}
+
+.logo {
+    min-width: 150px;
+    min-height: 50px;
+    padding-top: 30px;
+}
+
+.logo div {
+    width: 150px;
+    height: 50px;
+    margin: 0 auto;
+}
+
+.logo div div {
+    height: 50px;
+    width: 150px;
+    background:url("../images/logo.png");
+    background-size: contain;
+}
+
+
+.title {
+    font-size: 72px;
+    font-weight: 300;
+    text-align: center;
+    color: #ffffff;
+    padding-top: 151px;
+}
+
+.subtitle {
+    font-size: 36px;
+    font-weight: 400;
+    text-align: center;
+    color: #ffffff;
+}
+
+.menu {
+    margin-top: -96px;
+}
+
+.menu button {
+    color: #ffffff;
+    margin-top: 27px;
+    margin-bottom: 22px;
+}
+
+.menu .nav {
+    min-width: 760px;
+}
+
+.menuitem {
+    text-align: center;
+    line-height: 70px;
+    border-top: 3px solid transparent;
+    padding-left: 10px;
+    padding-right: 10px;
+    min-width: 150px;
+    margin-left: 0 !important;
+}
+
+.menuitem a {
+    font-weight: 600;
+    color: #ffffff !important;
+}
+
+.menuitem:hover {
+    border-color: #ffffff;
+    /*opacity: 0.2;*/
+    background: rgba(12, 12, 14, 0.2);
+}
+
+.contentheader1 {
+    font-size: 24px;
+    font-weight: 400;
+    color: #ff6000;
+    margin-top: 54px;
+}
+
+.contentheader2 {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.3;
+    color: #121214;
+    margin-top: 50px;
+}
+
+.content {
+    opacity: 0.6;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.88;
+    color: #121214;
+    padding-top: 24px;
+}
+
+.language-chooser {
+
+    float: right;
 }
