--- a/www/src/main/webapp/css/common.css
+++ b/www/src/main/webapp/css/common.css
@@ -18,8 +18,6 @@ body {
 }
 
 .logo {
-    min-width: 150px;
-    min-height: 50px;
     padding-top: 30px;
 }
 
@@ -36,6 +34,28 @@ body {
     background-size: contain;
 }
 
+.language-chooser {
+    padding-top: 30px;
+    width: 100px !important;
+    position: relative !important;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.language-chooser span {
+    color: #ffffff;
+    font-weight: 600;
+    padding-right: 0px;
+}
+
+.language-chooser div {
+    display: inline;
+    width: 135px;
+}
+
+.language-chooser div .dropdown-menu {
+    min-width: 100px !important;
+}
 
 .title {
     font-size: 72px;
@@ -142,7 +162,3 @@ body {
     padding-top: 24px;
 }
 
-.language-chooser {
-
-    float: right;
-}
