--- a/www/src/main/webapp/css/common.css
+++ b/www/src/main/webapp/css/common.css
@@ -39,13 +39,23 @@ body {
     width: 100px !important;
     position: relative !important;
     margin-left: -15px;
-    margin-right: -15px;
+    margin-right: -14px;
+}
+
+.language-chooser div button {
+    height: 35px;
+    width: 35px;
+    vertical-align: middle;
+    border: 0 solid;
+    background-color: rgba(18, 18, 20, 0.2);
+    border-radius: 0.9em;
+    outline: none;
 }
 
 .language-chooser span {
     color: #ffffff;
-    font-weight: 600;
-    padding-right: 0px;
+    font-weight: 300;
+    padding-right: 0;
 }
 
 .language-chooser div {
@@ -55,6 +65,20 @@ body {
 
 .language-chooser div .dropdown-menu {
     min-width: 100px !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.language-chooser div .dropdown-menu a {
+    font-weight: 400;
+    color: #ff6000;
+    padding-left: 5px;
+    display: block;
+}
+
+.language-chooser div .dropdown-menu a:hover {
+    border-color: #ffffff;
+    background: rgba(12, 12, 14, 0.2);
+    text-decoration: none;
 }
 
 .title {
@@ -99,7 +123,6 @@ body {
 
     .menuitem:hover {
         border-color: #ffffff;
-        /*opacity: 0.2;*/
         background: rgba(12, 12, 14, 0.2);
     }
 
@@ -111,8 +134,9 @@ body {
 
 @media (max-width: 543px) {
     .menu .nav {
-        background-color: rgba(255, 103, 0, 0.9);
+        background-color: rgba(255, 96, 0, 0.9);
         border-radius: 0 0 .25em .25em;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
     .menuitem {
@@ -126,7 +150,6 @@ body {
 
     .menuitem:hover {
         border-color: #ffffff;
-        /*opacity: 0.2;*/
         background: rgba(12, 12, 14, 0.2);
     }
 
