--- a/www/src/main/webapp/css/common.css
+++ b/www/src/main/webapp/css/common.css
@@ -81,6 +81,25 @@ body {
     text-decoration: none;
 }
 
+.chevron {
+    display: block;
+    margin-top: -7px;
+}
+
+.chevron::before {
+    border-style: solid;
+    border-width: 3px 3px 0 0;
+    content: '';
+    display: inline-block;
+    left: 0;
+    top: 0;
+    height: 9px;
+    width: 9px;
+    position: relative;
+    transform: rotate(135deg);
+}
+
+
 .title {
     font-size: 72px;
     font-weight: 300;
