--- a/www/src/main/webapp/css/common.css
+++ b/www/src/main/webapp/css/common.css
@@ -109,6 +109,10 @@ body {
     padding-top: 151px;
 }
 
+.title.single {
+    padding-top: 180px;
+}
+
 .subtitle {
     font-size: 36px;
     font-weight: 400;
