Registration button with animation

--- a/www/src/main/webapp/css/index.css
+++ b/www/src/main/webapp/css/index.css
@@ -41,12 +41,45 @@
     line-height: 50px;
 }
 
-.contact button {
+#register-slider {
+    width: 250px;
+    height: 50px;
+    overflow: hidden;
+}
+
+#register-slider > div {
+    width: 500px;
+    height: 50px;
+    margin-left: -250px;
+    -webkit-transition: 0.4s; /* For Safari 3.1 to 6.0 */
+    -moz-transition: 0.4s;
+    -ms-transition: 0.4s; /* IE 9 */
+    -o-transition: 0.4s;
+    transition: 0.4s;
+    -webkit-transition-delay: 0s; /* For Safari 3.1 to 6.0 */
+}
+.register-slided > div {
+    margin-left: 0 !important;
+}
+
+#register-slider > div > div {
+    width: 250px;
+    height: 50px;
+    display: inline-block;
+    color: #ff6000;
+}
+
+#register-slider span {
+    margin-left: 20px;
+}
+
+#register-slider button {
     width: 250px;
     height: 50px;
     border-radius: 4px;
     background-color: #ff6000;
     border: none;
+    outline: none;
 }
 
 .contact form > * {
