--- a/www/src/main/webapp/css/gallery.css
+++ b/www/src/main/webapp/css/gallery.css
@@ -1,6 +1,6 @@
 #carousel-gallery {
     margin-top: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
